# bloodflow

./: .gitignore  Makefile  biblist.tex  chapter2.tex  intro.tex  main.tex  p(a).jfif  refs.bib  tex-howto.txt  titlepage.tex
Latex/: Makefile  biblist.tex  chapter2.tex  intro.tex  main.tex  refs.bib  titlepage.tex
doc/: pres23.pptx  refs.bib
prog/: .syntastic_cpp_config_file  CMakeLists.txt  a.gdb
prog/lib/: CMakeLists.txt  common.hpp  debug.cpp  debug.hpp  grid.cpp  grid.hpp  single_vessel.cpp  single_vessel.hpp
prog/lib/assem/: misc.cpp  misc.hpp  transport.cpp  transport.hpp
prog/lib/logger/: imonitor.hpp  logger.cpp  logger.hpp  monitor_trigger.hpp  vtk_monitor.cpp  vtk_monitor.hpp
prog/lib/slae/: csrmat.cpp  csrmat.hpp  matrix_solver.cpp  matrix_solver.hpp
prog/tests/: CMakeLists.txt  bloodflow_test.cpp  model_test.cpp  testutils.hpp  transport_test.cpp
prog24/: .clang-format  CMakeLists.txt  exec_cppcheck.bat  fix_format.py  fix_xml_cpp_check.py
prog24/src/: CMakeLists.txt
prog24/src/bflow/: assembler_flux.cpp  assembler_flux.hpp  fem_grid.cpp  fem_grid.hpp  flux_calculator.cpp  flux_calculator.hpp  graph_grid.cpp  graph_grid.hpp  macros.hpp  matrix.cpp  matrix.hpp  matrix_solver.cpp  matrix_solver.hpp  time_series_writer.cpp  time_series_writer.hpp  vessel_graph.cpp  vessel_graph.hpp  vtk.cpp  vtk.hpp
prog24/src/bflow/debug/: printer.cpp  printer.hpp
prog24/src/tests/: bflow_test.cpp  debug.cpp  debug.hpp  dg_test.cpp  graph_test.cpp  grid_test.cpp  matrix_solver_test.cpp  matrix_test.cpp  nonlinsolver.cpp  nonlinsolver.hpp  test_bifurcated_vessel.cpp  test_burgers_equation.cpp  test_props_vessel.cpp  test_single_vessel.cpp  test_utils.cpp  test_utils.hpp  test_viscous.cpp  vessels_dg_test.cpp  vtk_test.cpp
rnd/dg/: .gitignore  CMakeLists.txt  block_inverter.hpp  common.hpp  common_test.hpp  fem_element.hpp  main.cpp  mat.cpp  mat.hpp  nonlin_solver.cpp  nonlin_solver.hpp  test_bifurcated_vessel.cpp  test_burgers_equation.cpp  test_fe_integration.cpp  test_nonlin_solver.cpp  test_single_vessel.cpp  test_transport_equation.cpp  vtk.cpp  vtk.hpp
thesis-2023/: chapter3.tex  intro.tex  main.tex  titlepage.tex
thesis-2024/: .gitignore  intro.tex  main.tex  numerical-method.tex  outro.tex  prob-definition.tex  results.tex  titlepage.tex
